# verse-slides

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  verse-slides-claude-code-prompt.md  verse-slides-design-spec.md
docs/: BACKLOG.md  RELEASE.md  WORKFLOW.md
tests/: __init__.py  test_cli.py  test_config.py  test_esv_api.py  test_pdf_generator.py  test_utils.py
verse_slides/: __init__.py  cli.py  config.py  esv_api.py  pdf_generator.py  utils.py
